--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,23 @@ jobs:
         with:
           name: "linux-libc-dev_5.18.5-1_amd64.deb"
           path: "linux-libc-dev_5.18.5-1_amd64.deb"
+      - name: qemu
+        uses: actions/upload-artifact@v3
+        with:
+          name: "qemu.tar"
+          path: "qemu.tar"
+      - name: ovmf
+        uses: actions/upload-artifact@v3
+        with:
+          name: "edk2.tar"
+          path: "edk2.tar"
       - name: Upload ar wildcards
         uses: actions/upload-artifact@v3
         with:
           name: "misc artifacts"
           path: |
             *.deb
+            *.tar
             *
       
       # Use the output from the `hello` step
